fix: correct submit button width on mobile

--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -604,7 +604,10 @@ form {
   }
 
   .contact-btn {
-    width: 100%;
+    width: fit-content;
+    margin: 10px auto 0 auto;
+    align-self: center;
+    display: inline-flex;
     justify-content: center;
   }
 
